# geodjango-project

./: Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
geoproject/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
locations/: admin.py  models.py  serializers.py  urls.py  views.py
locations/fixtures/: test_locations.json  test_users.json
locations/management/commands/: load_sample_locations.py
locations/migrations/: 0001_initial.py
locations/tests/: base.py  conftest.py  factories.py  runner.py  test_models.py  test_serializers.py  test_spatial_queries.py  test_views.py  test_with_factories.py  test_with_pytest.py  utils.py
